--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section> <!-- Nav Bar -->
         <nav class="nav_bar">
             <div class="logo">
-                <img src="./images/logo.svg" alt="logo">
+                <img src="https://res.cloudinary.com/mastercraft/image/upload/v1641134922/logo_oslgju.svg" alt="logo">
             </div>
             <div class="list">
                 <ul>
@@ -202,7 +202,7 @@
         <div class="pt-48 clear-both"></div>
 
         <div class="ml-8 md:ml-14">
-            <img class="logo" src="./images/logo.svg" alt="">
+            <img class="logo" src="https://res.cloudinary.com/mastercraft/image/upload/v1641134922/logo_oslgju.svg" alt="">
         </div>
 
         <div class="grid grid-cols-1  md:grid-cols-4 md:justify-items-center pt-14 space-y-8 md:space-y-0">
