signup input js validation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>FrontEnd Mentor</title>
     <link rel="shortcut icon" type="image/jpg" href="./images/favicon-32x32.png"/>
     </head>
-    <body onload='document.form1.text1.focus()'>
+    <body>
 
     <section> <!-- Nav Bar -->
         <nav class="nav_bar">
