signup input js validation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>FrontEnd Mentor</title>
     <link rel="shortcut icon" type="image/jpg" href="./images/favicon-32x32.png"/>
     </head>
-    <body>
+    <body onload='document.form1.text1.focus()'>
 
     <section> <!-- Nav Bar -->
         <nav class="nav_bar">
@@ -267,8 +267,5 @@
     <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js" integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
     <script src="/index.js"></script>
-    <script>
-        
-    </script>
 </body>
 </html>
