--- a/index.html
+++ b/index.html
@@ -263,9 +263,8 @@
         </div>
     </section>
 
-
+    <script src="/script.js" type="text/javascript"></script>
     <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js" integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
-    <script src="/app.js"></script>
 </body>
 </html>
