--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </script>
     <title>FrontEnd Mentor</title>
     <link rel="shortcut icon" type="image/jpg" href="./images/favicon-32x32.png"/>
+    <!-- <script src="/script.js" type="text/javascript"></script> -->
+    <script src="script.js" />
+
     </head>
     <body onload='document.form1.text1.focus()'>
 
@@ -263,7 +266,6 @@
         </div>
     </section>
 
-    <script src="/script.js" type="text/javascript"></script>
     <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js" integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
 </body>
